--- a/curve_editor/curve_editor.rc
+++ b/curve_editor/curve_editor.rc
@@ -57,17 +57,18 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,137,283,50,14
     PUSHBUTTON      "キャンセル",IDCANCEL,196,283,50,14
-    COMBOBOX        IDC_COMBO1,172,23,74,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_THEME,172,23,74,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "テーマ",IDC_STATIC,15,25,20,8
     GROUPBOX        "全般",IDC_STATIC,7,7,239,85
     CONTROL         "アラートを表示",IDC_ALERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,41,61,10
     LTEXT           "最大アンドゥ回数",IDC_STATIC,15,57,56,8
-    EDITTEXT        IDC_EDIT1,172,55,74,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_MAXIMUMUNDO,172,55,74,14,ES_AUTOHSCROLL | ES_NUMBER
     GROUPBOX        "編集",IDC_STATIC,7,97,239,179
     GROUPBOX        "IDモード",IDC_STATIC,13,191,228,78
     GROUPBOX        "Valueモード",IDC_STATIC,13,110,228,78
-    CONTROL         "前のカーブをグラフに表示",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,123,94,10
-    CONTROL         "値を自動でコピー",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,136,71,10
+    CONTROL         "前のカーブをグラフに表示",IDC_PREVIOUSCURVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,123,94,10
+    CONTROL         "値を自動でコピー",IDC_AUTOCOPY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,136,71,10
+    CONTROL         "",IDC_AUTOCOPY2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,203,16,10
 END
 
 IDD_SAVE DIALOGEX 0, 0, 228, 61
