コードの整形

--- a/curve_editor/curve_editor.rc
+++ b/curve_editor/curve_editor.rc
@@ -82,25 +82,26 @@ BEGIN
     LTEXT           "カーブ名を入力してください。(最大127文字)",IDC_STATIC,7,7,147,8
 END
 
-IDD_VALUE DIALOGEX 0, 0, 175, 62
+IDD_VALUE DIALOGEX 0, 0, 207, 65
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "値を入力"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,67,41,50,14
-    PUSHBUTTON      "キャンセル",IDCANCEL,118,41,50,14
-    LTEXT           "入力形式 : ""X1, Y1, X2, Y2""",IDC_STATIC,7,7,95,8
-    EDITTEXT        IDC_EDIT_VALUE,7,20,161,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,97,44,50,14
+    PUSHBUTTON      "キャンセル",IDCANCEL,150,44,50,14
+    LTEXT           """X1, Y1, X2, Y2""の形式でカーブの値を入力してください",IDC_STATIC,7,7,193,8
+    EDITTEXT        IDC_EDIT_VALUE,7,22,193,14,ES_AUTOHSCROLL
 END
 
-IDD_READ DIALOGEX 0, 0, 182, 56
+IDD_READ DIALOGEX 0, 0, 181, 63
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "IDを入力"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,71,35,50,14
-    PUSHBUTTON      "キャンセル",IDCANCEL,125,35,50,14
-    EDITTEXT        IDC_EDIT_READ,7,14,168,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,71,42,50,14
+    PUSHBUTTON      "キャンセル",IDCANCEL,124,42,50,14
+    EDITTEXT        IDC_EDIT_READ,7,21,167,14,ES_AUTOHSCROLL
+    LTEXT           "1次元のカーブIDを入力してください",IDC_STATIC,7,7,110,8
 END
 
 IDD_DIALOG1 DIALOGEX 0, 0, 310, 177
@@ -140,17 +141,17 @@ BEGIN
     IDD_VALUE, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 168
+        RIGHTMARGIN, 200
         TOPMARGIN, 7
-        BOTTOMMARGIN, 55
+        BOTTOMMARGIN, 58
     END
 
     IDD_READ, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 175
+        RIGHTMARGIN, 174
         TOPMARGIN, 7
-        BOTTOMMARGIN, 49
+        BOTTOMMARGIN, 56
     END
 
     IDD_DIALOG1, DIALOG
@@ -219,6 +220,7 @@ STRINGTABLE
 BEGIN
     CE_STR_OUTOFRANGE       "値が範囲外です"
     CE_STR_INVALIDINPUT     "入力値が無効です"
+    CE_STR_GIVEITANEME      "名前を入力してください"
 END
 
 #endif    // 日本語 (日本) resources
