--- a/curve_editor/curve_editor.rc
+++ b/curve_editor/curve_editor.rc
@@ -61,13 +61,11 @@ BEGIN
     LTEXT           "テーマ",IDC_STATIC,15,25,20,8
     GROUPBOX        "全般",IDC_STATIC,7,7,239,85
     CONTROL         "アラートを表示",IDC_ALERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,41,61,10
-    LTEXT           "最大アンドゥ回数",IDC_STATIC,15,57,73,8
-    EDITTEXT        IDC_MAXIMUMUNDO,172,55,74,14,ES_AUTOHSCROLL | ES_NUMBER
     GROUPBOX        "編集",IDC_STATIC,7,97,239,179
     GROUPBOX        "IDモード",IDC_STATIC,13,191,228,78
     GROUPBOX        "Valueモード",IDC_STATIC,13,110,228,78
-    CONTROL         "前のカーブをグラフに表示",IDC_PREVIOUSCURVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,123,94,10
-    CONTROL         "値を自動でコピー",IDC_AUTOCOPY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,136,71,10
+    CONTROL         "変更前のカーブをグラフに表示",IDC_PREVIOUSCURVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,54,110,10
+    CONTROL         "値を自動でコピー",IDC_AUTOCOPY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,123,71,10
     CONTROL         "",IDC_AUTOCOPY2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,203,16,10
 END
 
@@ -104,7 +102,7 @@ BEGIN
     LTEXT           "1次元のカーブIDを入力してください",IDC_STATIC,7,7,110,8
 END
 
-IDD_DIALOG1 DIALOGEX 0, 0, 310, 177
+IDD_ABOUT DIALOGEX 0, 0, 310, 177
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -154,7 +152,7 @@ BEGIN
         BOTTOMMARGIN, 56
     END
 
-    IDD_DIALOG1, DIALOG
+    IDD_ABOUT, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 303
@@ -190,7 +188,7 @@ BEGIN
     0
 END
 
-IDD_DIALOG1 AFX_DIALOG_LAYOUT
+IDD_ABOUT AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
