--- a/curve_editor/curve_editor.rc
+++ b/curve_editor/curve_editor.rc
@@ -50,14 +50,14 @@ END
 // Dialog
 //
 
-IDD_SETTINGS DIALOGEX 0, 0, 253, 304
+IDD_CONFIG DIALOGEX 0, 0, 253, 304
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "設定"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,137,283,50,14
     PUSHBUTTON      "キャンセル",IDCANCEL,196,283,50,14
-    COMBOBOX        IDC_THEME,172,23,74,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_THEME,172,23,74,54,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "テーマ",IDC_STATIC,15,25,20,8
     GROUPBOX        "全般",IDC_STATIC,7,7,239,85
     CONTROL         "アラートを表示",IDC_ALERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,41,61,10
@@ -120,7 +120,7 @@ END
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO
 BEGIN
-    IDD_SETTINGS, DIALOG
+    IDD_CONFIG, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 246
@@ -168,7 +168,7 @@ END
 // AFX_DIALOG_LAYOUT
 //
 
-IDD_SETTINGS AFX_DIALOG_LAYOUT
+IDD_CONFIG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
