コードの整形

--- a/curve_editor/curve_editor.rc
+++ b/curve_editor/curve_editor.rc
@@ -210,7 +210,9 @@ BEGIN
         END
         MENUITEM SEPARATOR
         MENUITEM "カーブの値をコピー (Ctrl+C)",          ID_MENU_COPY
+        MENUITEM "カーブの値を入力",                    ID_MENU_READ
         MENUITEM "プリセットとして保存 (Ctrl+S)",         ID_MENU_SAVE
+        MENUITEM SEPARATOR
         MENUITEM "カーブの値をコピー(4次元)",              ID_MENU_COPY4D
         MENUITEM "カーブを反転 (R)",                  ID_MENU_REVERSE
         MENUITEM "カーブを初期化",                     ID_MENU_DELETE
