--- a/curve_editor/curve_editor.vcxproj
+++ b/curve_editor/curve_editor.vcxproj
@@ -216,7 +216,6 @@ copy $(TargetPath) "C:\Users\njotn\UserDirectory\AviUtl_Plugins&amp;Scripts\Curv
     <ClInclude Include="ce_header.hpp" />
     <ClInclude Include="ce_macro.hpp" />
     <ClInclude Include="ce_structs.hpp" />
-    <ClInclude Include="ce_wndproc.hpp" />
     <ClInclude Include="framework.hpp" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
@@ -226,6 +225,14 @@ copy $(TargetPath) "C:\Users\njotn\UserDirectory\AviUtl_Plugins&amp;Scripts\Curv
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="curve_editor.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\OneDrive\画像\icon_copy.png" />
+    <Image Include="icon_clear.ico" />
+    <Image Include="icon_copy.ico" />
+    <Image Include="icon_fit.ico" />
+    <Image Include="icon_read.ico" />
+    <Image Include="icon_save.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
