--- a/curve_editor/curve_editor.vcxproj.filters
+++ b/curve_editor/curve_editor.vcxproj.filters
@@ -56,9 +56,6 @@
     <ClInclude Include="ce_macro.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="ce_wndproc.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="framework.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -81,5 +78,25 @@
     <ResourceCompile Include="curve_editor.rc">
       <Filter>リソース ファイル</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon_clear.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="icon_copy.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="icon_fit.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="icon_read.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="icon_save.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\OneDrive\画像\icon_copy.png">
+      <Filter>リソース ファイル</Filter>
+    </Image>
   </ItemGroup>
 </Project>
