コードの整形

--- a/curve_editor/curve_editor.vcxproj
+++ b/curve_editor/curve_editor.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{8bf3c00c-170b-4992-981a-f53f69292691}</ProjectGuid>
     <RootNamespace>curveeditor</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -231,6 +232,11 @@ copy $(TargetPath) "C:\Users\njotn\UserDirectory\AviUtl_Plugins&amp;Scripts\Curv
     <Image Include="icon_clear.ico" />
     <Image Include="icon_copy.ico" />
     <Image Include="icon_fit.ico" />
+    <Image Include="icon_fit_light.ico" />
+    <Image Include="icon_light_clear.ico" />
+    <Image Include="icon_light_copy.ico" />
+    <Image Include="icon_light_read.ico" />
+    <Image Include="icon_light_save.ico" />
     <Image Include="icon_read.ico" />
     <Image Include="icon_save.ico" />
   </ItemGroup>
