--- a/curve_editor/curve_editor.rc
+++ b/curve_editor/curve_editor.rc
@@ -253,13 +253,13 @@ IDI_CLEAR               ICON                    "icon_clear.ico"
 
 IDI_FIT                 ICON                    "icon_fit.ico"
 
-IDI_COPY_LIGHT          ICON                    "icon_light_copy.ico"
+IDI_COPY_LIGHT          ICON                    "icon_copy_light.ico"
 
-IDI_READ_LIGHT          ICON                    "icon_light_read.ico"
+IDI_READ_LIGHT          ICON                    "icon_read_light.ico"
 
-IDI_SAVE_LIGHT          ICON                    "icon_light_save.ico"
+IDI_SAVE_LIGHT          ICON                    "icon_save_light.ico"
 
-IDI_CLEAR_LIGHT         ICON                    "icon_light_clear.ico"
+IDI_CLEAR_LIGHT         ICON                    "icon_clear_light.ico"
 
 IDI_FIT_LIGHT           ICON                    "icon_fit_light.ico"
 
