--- a/curve_editor/curve_editor.vcxproj.filters
+++ b/curve_editor/curve_editor.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="ce_control.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ce_preset.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ce_header.hpp">
@@ -98,16 +101,16 @@
     <Image Include="..\..\..\..\..\OneDrive\画像\icon_copy.png">
       <Filter>リソース ファイル</Filter>
     </Image>
-    <Image Include="icon_light_copy.ico">
+    <Image Include="icon_copy_light.ico">
       <Filter>リソース ファイル</Filter>
     </Image>
-    <Image Include="icon_light_read.ico">
+    <Image Include="icon_read_light.ico">
       <Filter>リソース ファイル</Filter>
     </Image>
-    <Image Include="icon_light_save.ico">
+    <Image Include="icon_save_light.ico">
       <Filter>リソース ファイル</Filter>
     </Image>
-    <Image Include="icon_light_clear.ico">
+    <Image Include="icon_clear_light.ico">
       <Filter>リソース ファイル</Filter>
     </Image>
     <Image Include="icon_fit_light.ico">
