--- a/curve_editor/curve_editor.vcxproj
+++ b/curve_editor/curve_editor.vcxproj
@@ -220,28 +220,14 @@ copy $(TargetPath) "C:\Users\njotn\UserDirectory\AviUtl_Plugins&amp;Scripts\Curv
     <ClInclude Include="ce_header.hpp" />
     <ClInclude Include="ce_macro.hpp" />
     <ClInclude Include="ce_structs.hpp" />
-    <ClInclude Include="framework.hpp" />
+    <ClInclude Include="ce_framework.hpp" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="cur_drag.cur" />
     <None Include="curve_editor.def" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="curve_editor.rc" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="..\..\..\..\..\OneDrive\画像\icon_copy.png" />
-    <Image Include="icon_clear.ico" />
-    <Image Include="icon_copy.ico" />
-    <Image Include="icon_fit.ico" />
-    <Image Include="icon_fit_light.ico" />
-    <Image Include="icon_clear_light.ico" />
-    <Image Include="icon_copy_light.ico" />
-    <Image Include="icon_read_light.ico" />
-    <Image Include="icon_save_light.ico" />
-    <Image Include="icon_read.ico" />
-    <Image Include="icon_save.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
