--- a/curve_editor/curve_editor.vcxproj.filters
+++ b/curve_editor/curve_editor.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClInclude Include="ce_macro.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="framework.hpp">
+    <ClInclude Include="ce_framework.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="ce_classes.hpp">
@@ -79,48 +79,10 @@
     <None Include="curve_editor.def">
       <Filter>リソース ファイル</Filter>
     </None>
-    <None Include="cur_drag.cur">
-      <Filter>リソース ファイル</Filter>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="curve_editor.rc">
       <Filter>リソース ファイル</Filter>
     </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="icon_clear.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_copy.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_fit.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_read.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_save.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="..\..\..\..\..\OneDrive\画像\icon_copy.png">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_copy_light.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_read_light.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_save_light.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_clear_light.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
-    <Image Include="icon_fit_light.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
   </ItemGroup>
 </Project>
