--- a/curve_editor/curve_editor.rc
+++ b/curve_editor/curve_editor.rc
@@ -93,13 +93,13 @@ END
 
 IDD_READ DIALOGEX 0, 0, 181, 63
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "IDを入力"
+CAPTION "値を入力"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,71,42,50,14
     PUSHBUTTON      "キャンセル",IDCANCEL,124,42,50,14
     EDITTEXT        IDC_EDIT_READ,7,21,167,14,ES_AUTOHSCROLL
-    LTEXT           "1次元のカーブIDを入力してください",IDC_STATIC,7,7,110,8
+    LTEXT           "1次元のカーブ値を入力してください",IDC_STATIC,7,7,110,8
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 310, 177
@@ -109,6 +109,17 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,199,156,50,14
     PUSHBUTTON      "キャンセル",IDCANCEL,253,156,50,14
+END
+
+IDD_ID DIALOGEX 0, 0, 181, 63
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "IDを入力"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,71,42,50,14
+    PUSHBUTTON      "キャンセル",IDCANCEL,124,42,50,14
+    EDITTEXT        IDC_EDIT_ID,7,21,167,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "0~1023の範囲のIDを入力してください",IDC_STATIC,7,7,119,8
 END
 
 
@@ -159,6 +170,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 170
     END
+
+    IDD_ID, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 174
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 56
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -189,6 +208,11 @@ BEGIN
 END
 
 IDD_ABOUT AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_ID AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
